--- a/test/calendar.html
+++ b/test/calendar.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="utf-8">
 <title>dart</title>
-<link type="text/css" rel="stylesheet" href="css/main.css">
-<link type="text/css" rel="stylesheet" href="css/main-icons.css">
-<style>
+<link type="text/css" rel="stylesheet" href="../lib/css/blackp.css">
+<link type="text/css" rel="stylesheet" href="../lib/css/blackp-icons.css">
+<!--<style>
 
 /* UI Scheduler
 -----------------------------------------------------------------------------------------------------*/
-.ui-event-calendar {
+/*.ui-event-calendar {
     background: #FFFFFF;
     width: 100%;
     height: 100%;
@@ -366,7 +366,7 @@
 }
 
 
-</style>
+</style>-->
 </head>
 <body>
 <script type="application/dart" src="calendar.dart"></script>
