--- a/test/client.html
+++ b/test/client.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>dart</title>
-    <link type="text/css" rel="stylesheet" href="../lib/css/blackp.css">
-    <link type="text/css" rel="stylesheet" href="../lib/css/blackp-icons.css">
+    <link type="text/css" rel="stylesheet" href="../lib/css/main.css">
+    <link type="text/css" rel="stylesheet" href="../lib/css/main-icons.css">
   </head>
   <body>
     <script type="application/dart" src="client.dart"></script>
