--- a/test/client.html
+++ b/test/client.html
@@ -7,7 +7,7 @@
     <link type="text/css" rel="stylesheet" href="../lib/css/main-icons.css">
   </head>
   <body>
-    <script type="application/dart" src="client.dart"></script>
-    <!--<script src="client.dart.js"></script>-->
+    <!--<script type="application/dart" src="client.dart"></script>-->
+    <script src="client.dart.js"></script>
   </body>
 </html>
